--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -28,7 +28,7 @@
       </ion-item>
     </ion-list>
     <ion-button shape="round" size="small" (click)="login()">Login</ion-button>
-    <ion-button fill="clear" size="small" routerLink="/create-person">Register</ion-button>
+    <ion-button fill="clear" size="small" routerLink="/person">Register</ion-button>
   </ion-card>
 
   <app-response-dialog
